apps/mediamtx/service-hls.yaml
apiVersion: v1
kind: Service
metadata:
  name: mediamtx-hls
spec:
  type: ClusterIP
  selector:
    app: mediamtx
  ports:
    - name: hls
      port: 8888
      targetPort: 8888
