apps/mediamtx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mediamtx-hls
spec:
  ingressClassName: cloudflare
  rules:
    - host: live.youkan.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mediamtx-hls
                port:
                  number: 8888
